Small fix on code containers, overflow issue

--- a/articles/articles.css
+++ b/articles/articles.css
@@ -87,4 +87,5 @@ pre{
 	padding: .5rem;
 	border: 1px solid #777;
 	border-radius: .6rem;
+	overflow-x: scroll;
 }
